# whisper-key

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  FEATURES_CHECKLIST.md  HOTKEYS_TEST_REPORT.md  JOURNAL.md  LICENSE  PRODUCTION_FINAL_REPORT.md  PRODUCTION_TEST_REPORT.md  README.md  VALIDATION_REPORT.md  create-desktop-shortcut.ps1  lancer.bat  launch-dev.ps1  pyproject.toml  test_hotkeys.py  watchdog.ps1
manifests/v/verkinicolas/whisper-key/0.1.0/: verkinicolas.whisper-key.installer.yaml  verkinicolas.whisper-key.locale.en-US.yaml  verkinicolas.whisper-key.yaml
whisper_key/: clipboard.py  config.py  hotkeys.py  main.py  recorder.py  sounds.py  transcriber.py
